--- a/package.json
+++ b/package.json
@@ -32,5 +32,12 @@
     "typescript": "^5.0.0",
     "vite": "^5.0.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "bits-ui": "^0.21.7",
+    "clsx": "^2.1.1",
+    "lucide-svelte": "^0.378.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1"
+  }
 }
